--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -283,164 +283,158 @@
   <script>
 
 document.querySelectorAll('.footer a').forEach(link => {
-            const currentPath = window.location.pathname.replace(/\/$/, '');
-            const linkPath = new URL(link.href, window.location.origin).pathname.replace(/\/$/, '');
-            if (currentPath === linkPath) {
-              link.classList.add('active');
-            } else {
-              link.classList.remove('active');
-            }
-          });
-          
-    const adminEmail = localStorage.getItem("currentAdminEmail");
-    let selectedDate = new Date().toLocaleDateString("sv-SE");
-    let allUsers = [];
-    const expandedTasks = new Set();
-  
-    async function fetchUsers() {
-      try {
-        const res = await fetch(`https://beemazing.onrender.com/get-users?adminEmail=${encodeURIComponent(adminEmail)}`);
-        const data = await res.json();
-        allUsers = data.users || [];
-      } catch (err) {
-        console.error("Error fetching users:", err);
-      }
-    }
-  
-    async function handleDecision(title, date, index, decision, user, event) {
-      try {
-        const button = event.target;
-        const taskEntry = button.closest(".task-entry");
-        const buttons = taskEntry.querySelectorAll("button");
-        buttons.forEach(btn => {
-          btn.disabled = true;
-          btn.style.opacity = "0.5";
-        });
-  
-        const response = await fetch("https://beemazing.onrender.com/api/review-task", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({
-            adminEmail,
-            title,
-            date,
-            selectedDate,
-            user,
-            decision
-          })
-        });
-  
-        const data = await response.json();
-        if (!response.ok) throw new Error(data.error || "Failed to process decision");
-  
-        setTimeout(() => loadTasks(), 500);
-      } catch (err) {
-        console.error("Error processing decision:", err);
-        const errorDiv = document.createElement("div");
-        errorDiv.style.color = "red";
-        errorDiv.textContent = `Error: ${err.message}`;
-        taskEntry.appendChild(errorDiv);
-        taskEntry.querySelectorAll("button").forEach(btn => {
-          btn.disabled = false;
-          btn.style.opacity = "1";
-        });
-        setTimeout(() => errorDiv.remove(), 3000);
-      }
-    }
-  
-    async function handleReplace(title, date, index, originalUser, event) {
-      const taskEntry = event.target.closest(".task-entry");
-      const select = taskEntry.querySelector(`#replace-select-${index}`);
-      const newUser = select.value;
-      if (!newUser || newUser === originalUser) {
-        const errorDiv = document.createElement("div");
-        errorDiv.style.color = "red";
-        errorDiv.textContent = "Please select a different user.";
-        taskEntry.appendChild(errorDiv);
-        setTimeout(() => errorDiv.remove(), 3000);
-        return;
-      }
-  
-      try {
-        const response = await fetch("https://beemazing.onrender.com/api/replace-user", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({
-            adminEmail,
-            title,
-            date,
-            selectedDate,
-            index: parseInt(index),
-            originalUser,
-            newUser
-          })
-        });
-  
-        const data = await response.json();
-        if (!response.ok) throw new Error(data.error || "Failed to replace user");
-  
-        const turnEntry = taskEntry.querySelector(`.turn-entry[data-index="${index}"]`);
-        turnEntry.querySelector("p").textContent = `Turn ${parseInt(index) + 1}: ${newUser} - Pending`;
-        turnEntry.querySelector("select").value = "";
-        turnEntry.dataset.user = newUser;
-        setTimeout(() => loadTasks(), 500);
-      } catch (err) {
-        console.error("Error replacing user:", err);
-        const errorDiv = document.createElement("div");
-        errorDiv.style.color = "red";
-        errorDiv.textContent = `Error: ${err.message}`;
-        taskEntry.appendChild(errorDiv);
-        setTimeout(() => errorDiv.remove(), 3000);
-      }
-    }
-  
-    async function handleRevert(title, date, index, user, event) {
-      try {
-        const button = event.target;
-        const taskEntry = button.closest(".task-entry");
-        const buttons = taskEntry.querySelectorAll("button");
-        buttons.forEach(btn => {
-          btn.disabled = true;
-          btn.style.opacity = "0.5";
-        });
-  
-        const response = await fetch("https://beemazing.onrender.com/api/revert-decision", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({
-            adminEmail,
-            title,
-            date,
-            selectedDate,
-            user
-          })
-        });
-  
-        const data = await response.json();
-        if (!response.ok) throw new Error(data.error || "Failed to revert decision");
-  
-        setTimeout(() => loadTasks(), 500);
-      } catch (err) {
-        console.error("Error reverting decision:", err);
-        const errorDiv = document.createElement("div");
-        errorDiv.style.color = "red";
-        errorDiv.textContent = `Error: ${err.message}`;
-        taskEntry.appendChild(errorDiv);
-        taskEntry.querySelectorAll("button").forEach(btn => {
-          btn.disabled = false;
-          btn.style.opacity = "1";
-        });
-        setTimeout(() => errorDiv.remove(), 3000);
-      }
-    }
-  
+  const currentPath = window.location.pathname.replace(/\/$/, '');
+  const linkPath = new URL(link.href, window.location.origin).pathname.replace(/\/$/, '');
+  if (currentPath === linkPath) {
+    link.classList.add('active');
+  } else {
+    link.classList.remove('active');
+  }
+});
 
+const adminEmail = localStorage.getItem("currentAdminEmail");
+let selectedDate = new Date().toLocaleDateString("sv-SE");
+let allUsers = [];
+const expandedTasks = new Set();
 
+async function fetchUsers() {
+  try {
+    const res = await fetch(`https://beemazing.onrender.com/get-users?adminEmail=${encodeURIComponent(adminEmail)}`);
+    const data = await res.json();
+    allUsers = data.users || [];
+  } catch (err) {
+    console.error("Error fetching users:", err);
+  }
+}
 
+async function handleDecision(title, date, index, decision, user, event) {
+  try {
+    const button = event.target;
+    const taskEntry = button.closest(".task-entry");
+    const buttons = taskEntry.querySelectorAll("button");
+    buttons.forEach(btn => {
+      btn.disabled = true;
+      btn.style.opacity = "0.5";
+    });
 
+    const response = await fetch("https://beemazing.onrender.com/api/review-task", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({
+        adminEmail,
+        title,
+        date,
+        selectedDate,
+        user,
+        decision
+      })
+    });
 
+    const data = await response.json();
+    if (!response.ok) throw new Error(data.error || "Failed to process decision");
 
-    async function handleReorder(title, date, newUserOrder) {
+    setTimeout(() => loadTasks(), 500);
+  } catch (err) {
+    console.error("Error processing decision:", err);
+    const errorDiv = document.createElement("div");
+    errorDiv.style.color = "red";
+    errorDiv.textContent = `Error: ${err.message}`;
+    taskEntry.appendChild(errorDiv);
+    taskEntry.querySelectorAll("button").forEach(btn => {
+      btn.disabled = false;
+      btn.style.opacity = "1";
+    });
+    setTimeout(() => errorDiv.remove(), 3000);
+  }
+}
+
+async function handleReplace(title, date, index, originalUser, event) {
+  const taskEntry = event.target.closest(".task-entry");
+  const select = taskEntry.querySelector(`#replace-select-${index}`);
+  const newUser = select.value;
+  if (!newUser || newUser === originalUser) {
+    const errorDiv = document.createElement("div");
+    errorDiv.style.color = "red";
+    errorDiv.textContent = "Please select a different user.";
+    taskEntry.appendChild(errorDiv);
+    setTimeout(() => errorDiv.remove(), 3000);
+    return;
+  }
+
+  try {
+    const response = await fetch("https://beemazing.onrender.com/api/replace-user", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({
+        adminEmail,
+        title,
+        date,
+        selectedDate,
+        index: parseInt(index),
+        originalUser,
+        newUser
+      })
+    });
+
+    const data = await response.json();
+    if (!response.ok) throw new Error(data.error || "Failed to replace user");
+
+    const turnEntry = taskEntry.querySelector(`.turn-entry[data-index="${index}"]`);
+    turnEntry.querySelector("p").textContent = `Turn ${parseInt(index) + 1}: ${newUser} - Pending`;
+    turnEntry.querySelector("select").value = "";
+    turnEntry.dataset.user = newUser;
+    setTimeout(() => loadTasks(), 500);
+  } catch (err) {
+    console.error("Error replacing user:", err);
+    const errorDiv = document.createElement("div");
+    errorDiv.style.color = "red";
+    errorDiv.textContent = `Error: ${err.message}`;
+    taskEntry.appendChild(errorDiv);
+    setTimeout(() => errorDiv.remove(), 3000);
+  }
+}
+
+async function handleRevert(title, date, index, user, event) {
+  try {
+    const button = event.target;
+    const taskEntry = button.closest(".task-entry");
+    const buttons = taskEntry.querySelectorAll("button");
+    buttons.forEach(btn => {
+      btn.disabled = true;
+      btn.style.opacity = "0.5";
+    });
+
+    const response = await fetch("https://beemazing.onrender.com/api/revert-decision", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({
+        adminEmail,
+        title,
+        date,
+        selectedDate,
+        user
+      })
+    });
+
+    const data = await response.json();
+    if (!response.ok) throw new Error(data.error || "Failed to revert decision");
+
+    setTimeout(() => loadTasks(), 500);
+  } catch (err) {
+    console.error("Error reverting decision:", err);
+    const errorDiv = document.createElement("div");
+    errorDiv.style.color = "red";
+    errorDiv.textContent = `Error: ${err.message}`;
+    taskEntry.appendChild(errorDiv);
+    taskEntry.querySelectorAll("button").forEach(btn => {
+      btn.disabled = false;
+      btn.style.opacity = "1";
+    });
+    setTimeout(() => errorDiv.remove(), 3000);
+  }
+}
+
+async function handleReorder(title, date, newUserOrder) {
   try {
     const response = await fetch("https://beemazing.onrender.com/api/reorder-turns", {
       method: "POST",
@@ -466,23 +460,37 @@ document.querySelectorAll('.footer a').forEach(link => {
 
 async function loadTasks() {
   try {
+    console.log("Loading tasks for date:", selectedDate); // Debug
     const res = await fetch(`https://beemazing.onrender.com/get-tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, {
       cache: "no-store"
     });
     if (!res.ok) throw new Error(`HTTP error ${res.status}`);
     const { tasks } = await res.json();
+    console.log("Tasks received:", tasks.map(t => ({ title: t.title, users: t.users, date: t.date }))); // Debug
 
     const container = document.getElementById("taskContainer");
-    container.innerHTML = "";
+    container.innerHTML = ""; // Clear UI
 
     const tasksByTitle = {};
     tasks.forEach(task => {
+      // Filter by date range
+      const [startDateStr, endDateStr] = task.date.split(" to ");
+      const startDate = new Date(startDateStr);
+      const endDate = new Date(endDateStr || "3000-01-01");
+      const currentDate = new Date(selectedDate);
+      if (currentDate < startDate || currentDate > endDate) return;
+
       if (!tasksByTitle[task.title]) {
         tasksByTitle[task.title] = { turns: [], pendingCount: 0, date: task.date, userOrder: task.users || [] };
+      } else {
+        console.warn(`Duplicate task title: ${task.title}, date: ${task.date}`); // Debug duplicates
       }
+
       const pendingCompletions = task.pendingCompletions?.[selectedDate] || [];
       const completions = task.completions?.[selectedDate] || [];
       const userOrder = task.users || [];
+      console.log(`Task ${task.title}: userOrder=${userOrder}, date=${task.date}, pending=${pendingCompletions}, completed=${completions}`); // Debug
+
       const repeat = task.repeat || "Daily";
       let requiredTimes = task.timesPerDay || 1;
       if (repeat === "Weekly") requiredTimes = task.timesPerWeek || 1;
@@ -495,6 +503,7 @@ async function loadTasks() {
         const user = userOrder[i % userOrder.length]; // Ignore tempTurnReplacement
         fullTurn.push(user);
       }
+      console.log(`Task ${task.title}: fullTurn=${fullTurn}`); // Debug
 
       fullTurn.forEach((user, index) => {
         tasksByTitle[task.title].turns.push({
@@ -584,14 +593,11 @@ async function loadTasks() {
 
           if (draggedIndex !== droppedIndex && dragData.title === title && dragData.date === date) {
             const currentUsers = userOrder.slice();
-            // Swap users
             [currentUsers[draggedIndex], currentUsers[droppedIndex]] = [currentUsers[droppedIndex], currentUsers[draggedIndex]];
-            // Update turns array
             const draggedTurnData = turns[draggedIndex];
             const droppedTurnData = turns[droppedIndex];
             turns[draggedIndex] = { ...droppedTurnData, user: currentUsers[draggedIndex], index: draggedIndex };
             turns[droppedIndex] = { ...draggedTurnData, user: currentUsers[droppedIndex], index: droppedIndex };
-            // Update UI
             const draggedTurn = turnEntries[draggedIndex];
             const droppedTurn = turnEntries[droppedIndex];
             const draggedUser = currentUsers[draggedIndex];
@@ -602,7 +608,6 @@ async function loadTasks() {
             droppedTurn.querySelector("p").textContent = `Turn ${droppedIndex + 1}: ${droppedUser} - ${droppedStatus}`;
             draggedTurn.dataset.user = draggedUser;
             droppedTurn.dataset.user = droppedUser;
-            // Send to server
             await handleReorder(title, date, currentUsers);
           }
         });
@@ -618,84 +623,78 @@ async function loadTasks() {
   }
 }
 
+function generateScrollableDates(monthOffset = 0) {
+  const container = document.getElementById("dayScrollContainer");
+  container.innerHTML = "";
 
+  const today = new Date();
+  today.setDate(1);
+  today.setMonth(today.getMonth() + monthOffset);
 
+  const currentMonth = today.getMonth();
+  const currentYear = today.getFullYear();
+  const daysInMonth = new Date(currentYear, currentMonth + 1, 0).getDate();
 
+  document.getElementById("monthLabel").textContent = today.toLocaleDateString(undefined, {
+    month: 'long',
+    year: 'numeric',
+  });
 
+  for (let i = 1; i <= daysInMonth; i++) {
+    const date = new Date(currentYear, currentMonth, i);
+    const btn = document.createElement("div");
+    btn.className = "day";
+    btn.textContent = i;
+    btn.dataset.date = `${date.getFullYear()}-${String(date.getMonth() + 1).padStart(2, '0')}-${String(date.getDate()).padStart(2, '0')}`;
 
-    
-    function generateScrollableDates(monthOffset = 0) {
-      const container = document.getElementById("dayScrollContainer");
-      container.innerHTML = "";
-  
-      const today = new Date();
-      today.setDate(1);
-      today.setMonth(today.getMonth() + monthOffset);
-  
-      const currentMonth = today.getMonth();
-      const currentYear = today.getFullYear();
-      const daysInMonth = new Date(currentYear, currentMonth + 1, 0).getDate();
-  
-      document.getElementById("monthLabel").textContent = today.toLocaleDateString(undefined, {
-        month: 'long',
-        year: 'numeric',
-      });
-  
-      for (let i = 1; i <= daysInMonth; i++) {
-        const date = new Date(currentYear, currentMonth, i);
-        const btn = document.createElement("div");
-        btn.className = "day";
-        btn.textContent = i;
-        btn.dataset.date = `${date.getFullYear()}-${String(date.getMonth() + 1).padStart(2, '0')}-${String(date.getDate()).padStart(2, '0')}`;
-  
-        btn.addEventListener("click", () => {
-          document.querySelectorAll(".day").forEach(d => d.classList.remove("selected"));
-          btn.classList.add("selected");
-          selectedDate = btn.dataset.date;
-          loadTasks();
-        });
-  
-        const todayStr = new Date().toLocaleDateString("sv-SE");
-        if (btn.dataset.date === todayStr) {
-          btn.classList.add("selected");
-          selectedDate = btn.dataset.date;
-          loadTasks();
-        }
-  
-        container.appendChild(btn);
-      }
-  
-      setTimeout(() => {
-        const selected = document.querySelector(".day.selected");
-        if (selected) {
-          selected.scrollIntoView({ behavior: "smooth", inline: "center" });
-        }
-      }, 50);
+    btn.addEventListener("click", () => {
+      document.querySelectorAll(".day").forEach(d => d.classList.remove("selected"));
+      btn.classList.add("selected");
+      selectedDate = btn.dataset.date;
+      loadTasks();
+    });
+
+    const todayStr = new Date().toLocaleDateString("sv-SE");
+    if (btn.dataset.date === todayStr) {
+      btn.classList.add("selected");
+      selectedDate = btn.dataset.date;
+      loadTasks();
     }
-  
-    let monthOffset = 0;
-    document.getElementById("prevMonth").addEventListener("click", () => {
-      monthOffset--;
-      generateScrollableDates(monthOffset);
-    });
-    document.getElementById("nextMonth").addEventListener("click", () => {
-      monthOffset++;
-      generateScrollableDates(monthOffset);
-    });
-    document.getElementById("scrollLeft").addEventListener("click", () => {
-      document.getElementById("dayScrollContainer").scrollBy({
-        left: -200,
-        behavior: "smooth",
-      });
-    });
-    document.getElementById("scrollRight").addEventListener("click", () => {
-      document.getElementById("dayScrollContainer").scrollBy({
-        left: 200,
-        behavior: "smooth",
-      });
-    });
-  
-    fetchUsers().then(() => generateScrollableDates());
+
+    container.appendChild(btn);
+  }
+
+  setTimeout(() => {
+    const selected = document.querySelector(".day.selected");
+    if (selected) {
+      selected.scrollIntoView({ behavior: "smooth", inline: "center" });
+    }
+  }, 50);
+}
+
+let monthOffset = 0;
+document.getElementById("prevMonth").addEventListener("click", () => {
+  monthOffset--;
+  generateScrollableDates(monthOffset);
+});
+document.getElementById("nextMonth").addEventListener("click", () => {
+  monthOffset++;
+  generateScrollableDates(monthOffset);
+});
+document.getElementById("scrollLeft").addEventListener("click", () => {
+  document.getElementById("dayScrollContainer").scrollBy({
+    left: -200,
+    behavior: "smooth",
+  });
+});
+document.getElementById("scrollRight").addEventListener("click", () => {
+  document.getElementById("dayScrollContainer").scrollBy({
+    left: 200,
+    behavior: "smooth",
+  });
+});
+
+fetchUsers().then(() => generateScrollableDates());
   </script>
 
 
