--- a/mobile/2-UserProfiles/usermarket.html
+++ b/mobile/2-UserProfiles/usermarket.html
@@ -116,6 +116,14 @@
         .btn-primary:hover {
             background-color: #FFB300;
         }
+        .btn-disabled {
+            background-color: #6B7280;
+            color: #D1D5DB;
+            cursor: not-allowed;
+        }
+        .btn-disabled:hover {
+            background-color: #6B7280;
+        }
         .modal {
             position: fixed;
             top: 0;
@@ -314,6 +322,18 @@
             document.getElementById('history-grid').innerHTML = "<p class='text-center'>Error: Missing user or admin email. Please log in again.</p>";
         }
 
+        async function getUserDiamonds(userName) {
+            try {
+                const response = await fetch(`https://beemazing.onrender.com/api/rewards?adminEmail=${encodeURIComponent(adminEmail)}`);
+                const data = await response.json();
+                if (!response.ok) throw new Error(data.error || "Failed to fetch user rewards");
+                return ((data.rewards || {})[userName] || {}).diamonds || 0;
+            } catch (err) {
+                console.error("Error fetching user diamonds:", err);
+                return 0;
+            }
+        }
+
         function showTab(tabId) {
             document.querySelectorAll('.tab-content').forEach(tab => tab.classList.add('hidden'));
             document.getElementById(tabId).classList.remove('hidden');
@@ -335,6 +355,9 @@
             historyGrid.innerHTML = "<p class='text-center'>Loading history...</p>";
 
             try {
+                // Fetch user honey balance
+                const userDiamonds = await getUserDiamonds(userName);
+
                 // Fetch all available rewards
                 const marketResponse = await fetch(`https://beemazing.onrender.com/api/market-rewards?adminEmail=${encodeURIComponent(adminEmail)}`);
                 const marketData = await marketResponse.json();
@@ -364,6 +387,7 @@
                         const isTheKey = reward.name === "The Key";
                         const isDiceChest = reward.type === "dice";
                         const isHoney = reward.type === "Honey";
+                        const canAfford = userDiamonds >= (reward.diamonds || 0);
                         const card = document.createElement("div");
                         card.className = "reward-card";
                         card.dataset.reward = reward.name;
@@ -374,7 +398,8 @@
                                     <span class="purchase-indicator" data-count="${count}"></span>
                                     <h3 class="text-lg font-semibold">${reward.name}</h3>
                                     <p class="text-[var(--text-color)]">Honey: ${reward.diamonds || 0} 🍯</p>
-                                    <button class="mt-2 px-3 py-1 btn-primary rounded font-semibold" 
+                                    <button class="mt-2 px-3 py-1 rounded font-semibold ${canAfford ? 'btn-primary' : 'btn-disabled'}" 
+                                            ${canAfford ? '' : 'disabled'} 
                                             onclick="claimReward('${userName}', '${reward.name}', '${reward.type || ''}', ${reward.diamonds || 0}, '${JSON.stringify(reward.outcomes || [])}')">Get It</button>
                                 </div>
                                 <div class="reward-card-back text-center">
@@ -479,6 +504,35 @@
 
         async function claimReward(userName, rewardName, rewardType, diamonds, outcomes) {
             try {
+                // Fetch user honey balance
+                const userDiamonds = await getUserDiamonds(userName);
+                if (userDiamonds < diamonds) {
+                    alert("Not enough honey to claim this reward!");
+                    return;
+                }
+
+                // Fetch current rewards
+                const rewardsResponse = await fetch(`https://beemazing.onrender.com/api/rewards?adminEmail=${encodeURIComponent(adminEmail)}`);
+                const rewardsData = await rewardsResponse.json();
+                if (!rewardsResponse.ok) throw new Error(rewardsData.error || "Failed to fetch rewards");
+                const rewards = rewardsData.rewards || {};
+
+                // Deduct honey
+                if (!rewards[userName]) rewards[userName] = { diamonds: 0 };
+                rewards[userName].diamonds = userDiamonds - diamonds;
+
+                // Save updated honey balance
+                const updateRewardsResponse = await fetch("https://beemazing.onrender.com/api/rewards", {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify({ adminEmail, rewards })
+                });
+                if (!updateRewardsResponse.ok) {
+                    const errorData = await updateRewardsResponse.json();
+                    throw new Error(errorData.error || "Failed to update rewards");
+                }
+
+                // Update user rewards
                 const userRewardsResponse = await fetch(`https://beemazing.onrender.com/api/user-rewards?adminEmail=${encodeURIComponent(adminEmail)}`);
                 const userRewardsData = await userRewardsResponse.json();
                 if (!userRewardsResponse.ok) throw new Error(userRewardsData.error || "Failed to fetch user rewards");
@@ -503,13 +557,14 @@
                     userRewards[userName].push(newReward);
                 }
 
-                const updateResponse = await fetch("https://beemazing.onrender.com/api/user-rewards", {
+                // Save updated user rewards
+                const updateUserRewardsResponse = await fetch("https://beemazing.onrender.com/api/user-rewards", {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
                     body: JSON.stringify({ adminEmail, userRewards })
                 });
-                if (!updateResponse.ok) {
-                    const errorData = await updateResponse.json();
+                if (!updateUserRewardsResponse.ok) {
+                    const errorData = await updateUserRewardsResponse.json();
                     throw new Error(errorData.error || "Failed to save user rewards");
                 }
 
@@ -541,7 +596,7 @@
                 confetti.style.setProperty('--x', Math.cos(angle * Math.PI / 180) * distance);
                 confetti.style.setProperty('--y', Math.sin(angle * Math.PI / 180) * distance);
                 confetti.style.left = '50%';
-                contetti.style.top = '50%';
+                confetti.style.top = '50%';
                 confetti.style.background = i % 2 === 0 ? 'var(--primary-color)' : '#FFB300';
                 overlay.appendChild(confetti);
                 setTimeout(() => confetti.remove(), 1500);
