--- a/register.html
+++ b/register.html
@@ -340,7 +340,7 @@
     <div class="logo">
       <img src="https://i.postimg.cc/x1fDPQPX/pngtree-honey-bee-logo-design-vector-png-image-12507314-removebg-preview.png" alt="BeeMazing Logo">
     </div>
-    <h2 id="formTitle">Register z12</h2>
+    <h2 id="formTitle">Register z13</h2>
     <form id="authForm" novalidate>
       <div id="emailGroup" class="input-group email">
         <input type="email" id="email" placeholder="Email" required />
@@ -440,9 +440,11 @@ function showResetPasswordForm() {
   resetPasswordForm.reset();
 }
   
-    // Email validation regex
+    /* Email validation regex
     const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
-  
+  */
+
+
     // Password strength validation (minimum 8 characters, at least one number)
     // const passwordRegex = /^(?=.*\d).{8,}$/;
      // Password strength validation (minimum 8 characters, at least one number)
@@ -466,12 +468,12 @@ function showResetPasswordForm() {
   const password = document.getElementById("password").value.trim();
   const confirmPassword = document.getElementById("confirmPassword").value.trim();
 
-  // Validate email for forgot password
+  /* Validate email for forgot password
   if (isResettingPassword && !emailRegex.test(email)) {
     message.style.color = "#D32F2F";
     message.textContent = "❌ Please enter a valid email";
     return;
-  }
+  } */
 
   // Validate inputs for register/login
   if (!isResettingPassword) {
