--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -545,6 +545,50 @@ async function fetchUsers() {
   }
 }
 
+
+
+
+async function updateLuckyChestProgress(userName, earnedHoney) {
+  const adminEmail = localStorage.getItem("currentAdminEmail");
+  try {
+    const response = await fetch(`https://beemazing.onrender.com/api/lucky-chests?adminEmail=${encodeURIComponent(adminEmail)}`);
+    const data = await response.json();
+    if (!response.ok) throw new Error(data.error || "Failed to fetch lucky chests");
+    const allChests = data.luckyChests || {};
+    const userChests = allChests[userName] || [];
+
+    let updated = false;
+
+    userChests.forEach(chest => {
+      if (chest.progress < chest.requiredPoints) {
+        chest.progress += earnedHoney;
+        if (chest.progress > chest.requiredPoints) {
+          chest.progress = chest.requiredPoints;
+        }
+        updated = true;
+      }
+    });
+
+    if (updated) {
+      allChests[userName] = userChests;
+      await fetch("https://beemazing.onrender.com/api/lucky-chests", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ adminEmail, luckyChests: allChests })
+      });
+    }
+  } catch (err) {
+    console.error("Error updating lucky chest progress:", err);
+  }
+}
+
+
+
+
+
+
+
+
 async function handleDecision(title, date, index, decision, user, event) {
   try {
     const button = event.target;
@@ -571,6 +615,11 @@ async function handleDecision(title, date, index, decision, user, event) {
     const data = await response.json();
     if (!response.ok) throw new Error(data.error || "Failed to process decision");
 
+    // If task is accepted, update Lucky Chest progress
+    if (decision === "accept" && data.rewardAmount > 0) {
+      await updateLuckyChestProgress(user, data.rewardAmount);
+    }
+
     setTimeout(() => loadTasks(), 500);
   } catch (err) {
     console.error("Error processing decision:", err);
@@ -585,6 +634,10 @@ async function handleDecision(title, date, index, decision, user, event) {
     setTimeout(() => errorDiv.remove(), 3000);
   }
 }
+
+
+
+
 
 async function handleReplace(title, date, index, originalUser, event) {
   const taskEntry = event.target.closest(".task-entry");
